FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>SALDEV-945: Field created to display account name in screen flow &apos;New Opportunity - Check Current Contract&apos;</description>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>