FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Billing_Contact_for_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_for_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for SALDEV-1045</description>
    <label>Billing Contact for Account</label>
    <type>Checkbox</type>
</CustomField>