FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Contact_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Company_Phone__c</fullName>
    <description>Twin the Contact Phone Field For Workato Integration.</description>
    <formula>Contact.Company_Phone__c</formula>
    <inlineHelpText>Twin the Contact Phone Field For Workato Integration.</inlineHelpText>
    <label>Contact Company Phone</label>
    <type>Text</type>
</CustomField>