FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Twin the Contact Email Field For Workato Integration.</description>
    <formula>Contact.Email</formula>
    <inlineHelpText>Twin the Contact Email Field For Workato Integration.</inlineHelpText>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>