FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Contact_FirstName__c</fullName>
    <description>Twin the Contact FirstName Field For Workato Integration.</description>
    <formula>Contact.FirstName</formula>
    <inlineHelpText>Twin the Contact FirstName Field For Workato Integration.</inlineHelpText>
    <label>Contact FirstName</label>
    <type>Text</type>
</CustomField>