FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Contact_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Contact_Inactive__c</fullName>
    <description>Twin the Contact Inactive Field For Workato Integration.</description>
    <formula>Contact.Inactive__c</formula>
    <inlineHelpText>Twin the Contact Inactive Field For Workato Integration.</inlineHelpText>
    <label>Contact Inactive</label>
    <type>Checkbox</type>
</CustomField>