FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Contact_LastName__c</fullName>
    <description>Twin the Contact LastName Field For Workato Integration.</description>
    <formula>Contact.LastName</formula>
    <inlineHelpText>Twin the Contact LastName Field For Workato Integration.</inlineHelpText>
    <label>Contact LastName</label>
    <type>Text</type>
</CustomField>