FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Contact_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Netsuite_ID__c</fullName>
    <description>Twin the Contact NetSuiteID Field For Workato Integration.</description>
    <formula>Contact.Netsuite_ID__c</formula>
    <inlineHelpText>Twin the Contact NetSuiteID Field For Workato Integration.</inlineHelpText>
    <label>Contact Netsuite ID</label>
    <type>Text</type>
</CustomField>