FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <description>Twin the Contact Title Field For Workato Integration.</description>
    <formula>Contact.Title</formula>
    <inlineHelpText>Twin the Contact Title Field For Workato Integration.</inlineHelpText>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>