FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Twin the Contact Salutation Field For Workato Integration.</description>
    <formula>TEXT(Contact.Salutation)</formula>
    <inlineHelpText>Twin the Contact Salutation Field For Workato Integration.</inlineHelpText>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>