FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Sync_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Event_Type__c</fullName>
    <description>Field is getting updated via Flow.</description>
    <inlineHelpText>Field is getting updated via Flow.</inlineHelpText>
    <label>Sync Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>