FLY wire David/force-app/main/default/objects/AccountContactRelation/fields/Workato_Sync_Field__c.field-meta.xml
<CustomField>
    <fullName>Workato_Sync_Field__c</fullName>
    <description>This is been set via flow-SALDEV-1088.</description>
    <label>Workato Sync Field</label>
    <type>DateTime</type>
</CustomField>